# google-photos-playlist

./: CLAUDE.md  README.md  pyproject.toml
src/google_photos_playlist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gpp/: cli.py  downloader.py  google_photos.py  kenburns.py  video.py
